--- a/Mysite/MyBlogs/Templates/MyBlogs/index.html
+++ b/Mysite/MyBlogs/Templates/MyBlogs/index.html
@@ -19,7 +19,7 @@
         {% endif %}
      </h2>
     <h4>
-<button class="btn btn-success" style="height:40px;width:120px" onclick="document.location='http://127.0.0.1:8080/MyBlogs/create'">Create blog</button>
+<button class="btn btn-success" style="height:40px;width:120px" onclick="document.location='create'">Create blog</button>
     </h4>
 </div>
 {% endblock %}
