--- a/Mysite/MyBlogs/Templates/MyBlogs/success_saved.html
+++ b/Mysite/MyBlogs/Templates/MyBlogs/success_saved.html
@@ -14,7 +14,7 @@
         Congratulations.
     </h1>
     <h2>
-        <button class="btn btn-outline-warning" style="height:50px;width:200px" onclick="document.location='http://127.0.0.1:8080/MyBlogs/'">To blogs</button>
+        <button class="btn btn-outline-warning" style="height:50px;width:200px" onclick="document.location='../MyBlogs/'">To blogs</button>
     </h2>
    </div>
 {% endblock %}
