--- a/Mysite/MyPolls/Templates/MyPolls/Index.html
+++ b/Mysite/MyPolls/Templates/MyPolls/Index.html
@@ -16,8 +16,8 @@
             </ul>
 
             <h3>
-                <button class="btn btn-success" style="height:40px;width:120px" onclick="document.location='http://127.0.0.1:8080/MyPolls/create'">Create poll</button>
-                <button class="btn btn-success" style="height:40px;width:150px" onclick="document.location='http://127.0.0.1:8080/MyPolls/create_choice'">Create choice</button>
+                <button class="btn btn-success" style="height:40px;width:120px" onclick="document.location='create'">Create poll</button>
+                <button class="btn btn-success" style="height:40px;width:150px" onclick="document.location='create_choice'">Create choice</button>
             </h3>
 
             {% else %}
