--- a/Mysite/MyPolls/Templates/MyPolls/success_saved.html
+++ b/Mysite/MyPolls/Templates/MyPolls/success_saved.html
@@ -14,7 +14,7 @@
         Congratulations.
     </h1>
     <h2>
-        <button class="btn btn-outline-warning" style="height:50px;width:200px" onclick="document.location='http://127.0.0.1:8080/MyPolls/'">To questions</button>
+        <button class="btn btn-outline-warning" style="height:50px;width:200px" onclick="document.location='../../MyPolls/'">To questions</button>
     </h2>
    </div>
 {% endblock %}
